fix main-room image stretching #63

--- a/src/blocks/main-room/main-room.scss
+++ b/src/blocks/main-room/main-room.scss
@@ -20,7 +20,6 @@
     }
 
     &:first-child {
-      flex-basis: 68.1%;
       width: 68.1%;
     }
 
@@ -35,7 +34,7 @@
       }
     }
   }
-  
+
   &__description-wrapper {
     padding: 5rem 0 4.57rem 9.5%;
   }
